fix: improved dark mode colors

--- a/bloch_app/src/custom.css
+++ b/bloch_app/src/custom.css
@@ -6,6 +6,8 @@
 
 .dark {
     --gate-brightness: 1.2;
+    --approve: oklch(44.646% 0.10033 154.429);
+    --approve-foreground: oklch(100% 0.00011 271.152);
 }
 
 @theme inline {
